--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system.alerts.yaml
@@ -2,9 +2,10 @@
   rules:
   - alert: KubeVersionMismatch
     annotations:
-      message: There are {{ $value }} different semantic versions of Kubernetes components
-        running.
+      description: There are {{ $value }} different semantic versions of Kubernetes
+        components running.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubeversionmismatch
+      summary: Different semantic versions of Kubernetes components running.
     expr: |
       count(count by (gitVersion) (label_replace(kubernetes_build_info{job!~"kube-dns|coredns"},"gitVersion","$1","gitVersion","(v[0-9]*.[0-9]*).*"))) > 1
     for: 15m
@@ -12,9 +13,10 @@
       severity: warning
   - alert: KubeClientErrors
     annotations:
-      message: Kubernetes API server client '{{ $labels.job }}/{{ $labels.instance
+      description: Kubernetes API server client '{{ $labels.job }}/{{ $labels.instance
         }}' is experiencing {{ $value | humanizePercentage }} errors.'
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubeclienterrors
+      summary: Kubernetes API server client is experiencing errors.
     expr: |
       (sum(rate(rest_client_requests_total{code=~"5.."}[5m])) by (instance, job)
         /
