--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kube-apiserver-slos.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kube-apiserver-slos.alerts.yaml
@@ -2,8 +2,9 @@
   rules:
   - alert: KubeAPIErrorBudgetBurn
     annotations:
-      message: The API server is burning too much error budget
+      description: The API server is burning too much error budget.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubeapierrorbudgetburn
+      summary: The API server is burning too much error budget.
     expr: |
       sum(apiserver_request:burnrate1h) > (14.40 * 0.01000)
       and
@@ -15,8 +16,9 @@
       short: 5m
   - alert: KubeAPIErrorBudgetBurn
     annotations:
-      message: The API server is burning too much error budget
+      description: The API server is burning too much error budget.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubeapierrorbudgetburn
+      summary: The API server is burning too much error budget.
     expr: |
       sum(apiserver_request:burnrate6h) > (6.00 * 0.01000)
       and
@@ -28,8 +30,9 @@
       short: 30m
   - alert: KubeAPIErrorBudgetBurn
     annotations:
-      message: The API server is burning too much error budget
+      description: The API server is burning too much error budget.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubeapierrorbudgetburn
+      summary: The API server is burning too much error budget.
     expr: |
       sum(apiserver_request:burnrate1d) > (3.00 * 0.01000)
       and
@@ -41,8 +44,9 @@
       short: 2h
   - alert: KubeAPIErrorBudgetBurn
     annotations:
-      message: The API server is burning too much error budget
+      description: The API server is burning too much error budget.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubeapierrorbudgetburn
+      summary: The API server is burning too much error budget.
     expr: |
       sum(apiserver_request:burnrate3d) > (1.00 * 0.01000)
       and
