--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kube-state-metrics.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kube-state-metrics.alerts.yaml
@@ -2,10 +2,11 @@
   rules:
   - alert: KubeStateMetricsListErrors
     annotations:
-      message: kube-state-metrics is experiencing errors at an elevated rate in list
-        operations. This is likely causing it to not be able to expose metrics about
-        Kubernetes objects correctly or at all.
+      description: kube-state-metrics is experiencing errors at an elevated rate in
+        list operations. This is likely causing it to not be able to expose metrics
+        about Kubernetes objects correctly or at all.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubestatemetricslisterrors
+      summary: kube-state-metrics is experiencing errors in list operations.
     expr: |
       (sum(rate(kube_state_metrics_list_total{job="kube-state-metrics",result="error"}[5m]))
         /
@@ -16,10 +17,11 @@
       severity: critical
   - alert: KubeStateMetricsWatchErrors
     annotations:
-      message: kube-state-metrics is experiencing errors at an elevated rate in watch
-        operations. This is likely causing it to not be able to expose metrics about
-        Kubernetes objects correctly or at all.
+      description: kube-state-metrics is experiencing errors at an elevated rate in
+        watch operations. This is likely causing it to not be able to expose metrics
+        about Kubernetes objects correctly or at all.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubestatemetricswatcherrors
+      summary: kube-state-metrics is experiencing errors in watch operations.
     expr: |
       (sum(rate(kube_state_metrics_watch_total{job="kube-state-metrics",result="error"}[5m]))
         /
