--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
@@ -2,9 +2,10 @@
   rules:
   - alert: KubePodCrashLooping
     annotations:
-      message: Pod {{ $labels.namespace }}/{{ $labels.pod }} ({{ $labels.container
+      description: Pod {{ $labels.namespace }}/{{ $labels.pod }} ({{ $labels.container
         }}) is restarting {{ printf "%.2f" $value }} times / 5 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepodcrashlooping
+      summary: Pod is crash looping.
     expr: |
       rate(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[5m]) * 60 * 5 > 0
     for: 15m
@@ -12,9 +13,10 @@
       severity: warning
   - alert: KubePodNotReady
     annotations:
-      message: Pod {{ $labels.namespace }}/{{ $labels.pod }} has been in a non-ready
+      description: Pod {{ $labels.namespace }}/{{ $labels.pod }} has been in a non-ready
         state for longer than 15 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepodnotready
+      summary: Pod has been in a non-ready state for more than 15 minutes.
     expr: |
       sum by (namespace, pod) (
         max by(namespace, pod) (
@@ -28,10 +30,11 @@
       severity: warning
   - alert: KubeDeploymentGenerationMismatch
     annotations:
-      message: Deployment generation for {{ $labels.namespace }}/{{ $labels.deployment
+      description: Deployment generation for {{ $labels.namespace }}/{{ $labels.deployment
         }} does not match, this indicates that the Deployment has failed but has not
         been rolled back.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubedeploymentgenerationmismatch
+      summary: Deployment generation mismatch due to possible roll-back
     expr: |
       kube_deployment_status_observed_generation{job="kube-state-metrics"}
         !=
@@ -41,9 +44,10 @@
       severity: warning
   - alert: KubeDeploymentReplicasMismatch
     annotations:
-      message: Deployment {{ $labels.namespace }}/{{ $labels.deployment }} has not
-        matched the expected number of replicas for longer than 15 minutes.
+      description: Deployment {{ $labels.namespace }}/{{ $labels.deployment }} has
+        not matched the expected number of replicas for longer than 15 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubedeploymentreplicasmismatch
+      summary: Deployment has not matched the expected number of replicas.
     expr: |
       (
         kube_deployment_spec_replicas{job="kube-state-metrics"}
@@ -59,9 +63,10 @@
       severity: warning
   - alert: KubeStatefulSetReplicasMismatch
     annotations:
-      message: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} has not
-        matched the expected number of replicas for longer than 15 minutes.
+      description: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} has
+        not matched the expected number of replicas for longer than 15 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubestatefulsetreplicasmismatch
+      summary: Deployment has not matched the expected number of replicas.
     expr: |
       (
         kube_statefulset_status_replicas_ready{job="kube-state-metrics"}
@@ -77,10 +82,11 @@
       severity: warning
   - alert: KubeStatefulSetGenerationMismatch
     annotations:
-      message: StatefulSet generation for {{ $labels.namespace }}/{{ $labels.statefulset
+      description: StatefulSet generation for {{ $labels.namespace }}/{{ $labels.statefulset
         }} does not match, this indicates that the StatefulSet has failed but has
         not been rolled back.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubestatefulsetgenerationmismatch
+      summary: StatefulSet generation mismatch due to possible roll-back
     expr: |
       kube_statefulset_status_observed_generation{job="kube-state-metrics"}
         !=
@@ -90,9 +96,10 @@
       severity: warning
   - alert: KubeStatefulSetUpdateNotRolledOut
     annotations:
-      message: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} update
+      description: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} update
         has not been rolled out.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubestatefulsetupdatenotrolledout
+      summary: StatefulSet update has not been rolled out.
     expr: |
       (
         max without (revision) (
@@ -116,9 +123,10 @@
       severity: warning
   - alert: KubeDaemonSetRolloutStuck
     annotations:
-      message: DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset }} has not finished
-        or progressed for at least 15 minutes.
+      description: DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset }} has not
+        finished or progressed for at least 15 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubedaemonsetrolloutstuck
+      summary: DaemonSet rollout is stuck.
     expr: |
       (
         (
@@ -148,9 +156,10 @@
       severity: warning
   - alert: KubeContainerWaiting
     annotations:
-      message: Pod {{ $labels.namespace }}/{{ $labels.pod }} container {{ $labels.container}}
+      description: Pod {{ $labels.namespace }}/{{ $labels.pod }} container {{ $labels.container}}
         has been in waiting state for longer than 1 hour.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubecontainerwaiting
+      summary: Pod container waiting longer than 1 hour
     expr: |
       sum by (namespace, pod, container) (kube_pod_container_status_waiting_reason{job="kube-state-metrics"}) > 0
     for: 1h
@@ -158,9 +167,10 @@
       severity: warning
   - alert: KubeDaemonSetNotScheduled
     annotations:
-      message: '{{ $value }} Pods of DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset
+      description: '{{ $value }} Pods of DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset
         }} are not scheduled.'
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubedaemonsetnotscheduled
+      summary: DaemonSet pods are not scheduled.
     expr: |
       kube_daemonset_status_desired_number_scheduled{job="kube-state-metrics"}
         -
@@ -170,9 +180,10 @@
       severity: warning
   - alert: KubeDaemonSetMisScheduled
     annotations:
-      message: '{{ $value }} Pods of DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset
+      description: '{{ $value }} Pods of DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset
         }} are running where they are not supposed to run.'
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubedaemonsetmisscheduled
+      summary: DaemonSet pods are misscheduled.
     expr: |
       kube_daemonset_status_number_misscheduled{job="kube-state-metrics"} > 0
     for: 15m
@@ -180,9 +191,10 @@
       severity: warning
   - alert: KubeJobCompletion
     annotations:
-      message: Job {{ $labels.namespace }}/{{ $labels.job_name }} is taking more than
-        12 hours to complete.
+      description: Job {{ $labels.namespace }}/{{ $labels.job_name }} is taking more
+        than 12 hours to complete.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubejobcompletion
+      summary: Job did not complete in time
     expr: |
       kube_job_spec_completions{job="kube-state-metrics"} - kube_job_status_succeeded{job="kube-state-metrics"}  > 0
     for: 12h
@@ -190,8 +202,9 @@
       severity: warning
   - alert: KubeJobFailed
     annotations:
-      message: Job {{ $labels.namespace }}/{{ $labels.job_name }} failed to complete.
+      description: Job {{ $labels.namespace }}/{{ $labels.job_name }} failed to complete.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubejobfailed
+      summary: Job failed to complete.
     expr: |
       kube_job_failed{job="kube-state-metrics"}  > 0
     for: 15m
@@ -199,9 +212,10 @@
       severity: warning
   - alert: KubeHpaReplicasMismatch
     annotations:
-      message: HPA {{ $labels.namespace }}/{{ $labels.hpa }} has not matched the desired
-        number of replicas for longer than 15 minutes.
+      description: HPA {{ $labels.namespace }}/{{ $labels.hpa }} has not matched the
+        desired number of replicas for longer than 15 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubehpareplicasmismatch
+      summary: HPA has not matched descired number of replicas.
     expr: |
       (kube_hpa_status_desired_replicas{job="kube-state-metrics"}
         !=
@@ -213,9 +227,10 @@
       severity: warning
   - alert: KubeHpaMaxedOut
     annotations:
-      message: HPA {{ $labels.namespace }}/{{ $labels.hpa }} has been running at max
-        replicas for longer than 15 minutes.
+      description: HPA {{ $labels.namespace }}/{{ $labels.hpa }} has been running
+        at max replicas for longer than 15 minutes.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubehpamaxedout
+      summary: HPA is running at max replicas
     expr: |
       kube_hpa_status_current_replicas{job="kube-state-metrics"}
         ==
