--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
@@ -2,9 +2,10 @@
   rules:
   - alert: KubeCPUOvercommit
     annotations:
-      message: Cluster has overcommitted CPU resource requests for Pods and cannot
+      description: Cluster has overcommitted CPU resource requests for Pods and cannot
         tolerate node failure.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubecpuovercommit
+      summary: Cluster has overcommitted CPU resource requests.
     expr: |
       sum(namespace:kube_pod_container_resource_requests_cpu_cores:sum{})
         /
@@ -16,9 +17,10 @@
       severity: warning
   - alert: KubeMemoryOvercommit
     annotations:
-      message: Cluster has overcommitted memory resource requests for Pods and cannot
-        tolerate node failure.
+      description: Cluster has overcommitted memory resource requests for Pods and
+        cannot tolerate node failure.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubememoryovercommit
+      summary: Cluster has overcommitted memory resource requests.
     expr: |
       sum(namespace:kube_pod_container_resource_requests_memory_bytes:sum{})
         /
@@ -32,8 +34,9 @@
       severity: warning
   - alert: KubeCPUQuotaOvercommit
     annotations:
-      message: Cluster has overcommitted CPU resource requests for Namespaces.
+      description: Cluster has overcommitted CPU resource requests for Namespaces.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubecpuquotaovercommit
+      summary: Cluster has overcommitted CPU resource requests.
     expr: |
       sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="cpu"})
         /
@@ -44,8 +47,9 @@
       severity: warning
   - alert: KubeMemoryQuotaOvercommit
     annotations:
-      message: Cluster has overcommitted memory resource requests for Namespaces.
+      description: Cluster has overcommitted memory resource requests for Namespaces.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubememoryquotaovercommit
+      summary: Cluster has overcommitted memory resource requests.
     expr: |
       sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="memory"})
         /
@@ -56,9 +60,10 @@
       severity: warning
   - alert: KubeQuotaFullyUsed
     annotations:
-      message: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
+      description: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
         }} of its {{ $labels.resource }} quota.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubequotafullyused
+      summary: Namespace quota is fully used.
     expr: |
       kube_resourcequota{job="kube-state-metrics", type="used"}
         / ignoring(instance, job, type)
@@ -69,10 +74,11 @@
       severity: info
   - alert: CPUThrottlingHigh
     annotations:
-      message: '{{ $value | humanizePercentage }} throttling of CPU in namespace {{
-        $labels.namespace }} for container {{ $labels.container }} in pod {{ $labels.pod
+      description: '{{ $value | humanizePercentage }} throttling of CPU in namespace
+        {{ $labels.namespace }} for container {{ $labels.container }} in pod {{ $labels.pod
         }}.'
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-cputhrottlinghigh
+      summary: Processes experience elevated CPU throttling.
     expr: |
       sum(increase(container_cpu_cfs_throttled_periods_total{container!="", namespace !~ "monitoring-.*(exporter|metrics)", container != "prometheus-config-reloader"}[5m])) by (container, pod, namespace)
         /
