--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
@@ -2,10 +2,11 @@
   rules:
   - alert: KubePersistentVolumeFillingUp
     annotations:
-      message: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }}
-        in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage
+      description: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim
+        }} in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage
         }} free.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefillingup
+      summary: PersistentVolume is filling up.
     expr: |
       kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}
         /
@@ -16,10 +17,11 @@
       severity: critical
   - alert: KubePersistentVolumeFillingUp
     annotations:
-      message: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim
+      description: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim
         }} in Namespace {{ $labels.namespace }} is expected to fill up within four
         days. Currently {{ $value | humanizePercentage }} is available.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefillingup
+      summary: PersistentVolume is filling up.
     expr: |
       (
         kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}
@@ -33,9 +35,10 @@
       severity: warning
   - alert: KubePersistentVolumeErrors
     annotations:
-      message: The persistent volume {{ $labels.persistentvolume }} has status {{
-        $labels.phase }}.
+      description: The persistent volume {{ $labels.persistentvolume }} has status
+        {{ $labels.phase }}.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumeerrors
+      summary: PersistentVolume is having issues with provisioning.
     expr: |
       kube_persistentvolume_status_phase{phase=~"Failed|Pending",job="kube-state-metrics"} > 0
     for: 5m
