--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-controller-manager.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-controller-manager.alerts.yaml
@@ -2,8 +2,9 @@
   rules:
   - alert: KubeControllerManagerDown
     annotations:
-      message: KubeControllerManager has disappeared from Prometheus target discovery.
+      description: KubeControllerManager has disappeared from Prometheus target discovery.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubecontrollermanagerdown
+      summary: Target disappeared from Prometheus target discovery.
     expr: |
       absent(up{job="kube-controller-manager"} == 1)
     for: 15m
