--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-scheduler.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-scheduler.alerts.yaml
@@ -2,8 +2,9 @@
   rules:
   - alert: KubeSchedulerDown
     annotations:
-      message: KubeScheduler has disappeared from Prometheus target discovery.
+      description: KubeScheduler has disappeared from Prometheus target discovery.
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubeschedulerdown
+      summary: Target disappeared from Prometheus target discovery.
     expr: |
       absent(up{job="kube-scheduler"} == 1)
     for: 15m
