--- a/ansible/install_applications/vars/home-mosquitto.yml
+++ b/ansible/install_applications/vars/home-mosquitto.yml
@@ -4,7 +4,7 @@
 _mosquitto_var_loader:
   base_image:
     name: "eclipse-mosquitto"
-    tag: "1.6.10"
+    tag: "1.6.12-openssl"
   namespace: "home-mosquitto"
 
 mosquitto:
