--- a/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
+++ b/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
@@ -31,8 +31,8 @@ kube_state_metrics:
 _kube_state_metrics_rbac_proxy_var_loader:
   base_image:
     repo: quay.io
-    name: "coreos/kube-rbac-proxy"
-    tag: "v0.4.1"
+    name: "brancz/kube-rbac-proxy"
+    tag: "v0.6.0"
 
 kube_state_metrics_rbac_proxy:
   base_image: "{{ _kube_state_metrics_rbac_proxy_var_loader.base_image }}"
