--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/prometheus-operator.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/prometheus-operator.alerts.yaml
@@ -2,8 +2,10 @@
   rules:
   - alert: PrometheusOperatorListErrors
     annotations:
-      message: Errors while performing List operations in controller {{$labels.controller}}
+      description: Errors while performing List operations in controller {{$labels.controller}}
         in {{$labels.namespace}} namespace.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-prometheusoperatorlisterrors
+      summary: Errors while performing list operations in controller.
     expr: |
       (sum by (controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job="prometheus-operator",namespace="monitoring"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_list_operations_total{job="prometheus-operator",namespace="monitoring"}[10m]))) > 0.4
     for: 15m
@@ -11,27 +13,56 @@
       severity: warning
   - alert: PrometheusOperatorWatchErrors
     annotations:
-      message: Errors while performing Watch operations in controller {{$labels.controller}}
+      description: Errors while performing watch operations in controller {{$labels.controller}}
         in {{$labels.namespace}} namespace.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-prometheusoperatorwatcherrors
+      summary: Errors while performing watch operations in controller.
     expr: |
       (sum by (controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="prometheus-operator",namespace="monitoring"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_watch_operations_total{job="prometheus-operator",namespace="monitoring"}[10m]))) > 0.4
     for: 15m
     labels:
       severity: warning
+  - alert: PrometheusOperatorSyncFailed
+    annotations:
+      description: Controller {{ $labels.controller }} in {{ $labels.namespace }}
+        namespace fails to reconcile {{ $value }} objects.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-prometheusoperatorsyncfailed
+      summary: Last controller reconciliation failed
+    expr: |
+      min_over_time(prometheus_operator_syncs{status="failed",job="prometheus-operator",namespace="monitoring"}[5m]) > 0
+    for: 10m
+    labels:
+      severity: warning
   - alert: PrometheusOperatorReconcileErrors
     annotations:
-      message: Errors while reconciling {{ $labels.controller }} in {{ $labels.namespace
-        }} Namespace.
+      description: '{{ $value | humanizePercentage }} of reconciling operations failed
+        for {{ $labels.controller }} controller in {{ $labels.namespace }} namespace.'
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-prometheusoperatorreconcileerrors
+      summary: Errors while reconciling controller.
     expr: |
-      rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator",namespace="monitoring"}[5m]) > 0.1
+      (sum by (controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator",namespace="monitoring"}[5m]))) / (sum by (controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="prometheus-operator",namespace="monitoring"}[5m]))) > 0.1
     for: 10m
     labels:
       severity: warning
   - alert: PrometheusOperatorNodeLookupErrors
     annotations:
-      message: Errors while reconciling Prometheus in {{ $labels.namespace }} Namespace.
+      description: Errors while reconciling Prometheus in {{ $labels.namespace }}
+        Namespace.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-prometheusoperatornodelookuperrors
+      summary: Errors while reconciling Prometheus.
     expr: |
       rate(prometheus_operator_node_address_lookup_errors_total{job="prometheus-operator",namespace="monitoring"}[5m]) > 0.1
     for: 10m
+    labels:
+      severity: warning
+  - alert: PrometheusOperatorNotReady
+    annotations:
+      description: Prometheus operator in {{ $labels.namespace }} namespace isn't
+        ready to reconcile {{ $labels.controller }} resources.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-prometheusoperatornotready
+      summary: Prometheus operator not ready
+    expr: |
+      min by(namespace, controller) (max_over_time(prometheus_operator_ready{job="prometheus-operator",namespace="monitoring"}[5m]) == 0)
+    for: 5m
     labels:
       severity: warning
