Fix web-homer mailhog icon

--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -29,7 +29,7 @@ homer_images_to_download:
   - name: gotify.png
     source: https://github.com/gotify/logo/raw/master/gotify-logo-small.png
   - name: mailhog.png
-    source: https://hub.helm.sh/api/chartsvc/v1/assets/codecentric/mailhog/logo
+    source: https://artifacthub.io/image/e62ad039-2b04-4e0d-b3fc-3e604eaf3872
   - name: unifi.svg
     source: https://prd-www-cdn.ubnt.com/media/images/ubnt-logo-u.svg
 
