--- a/ansible/install_applications/roles/download-sickchill.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/download-sickchill.deploy/tasks/main.yml
@@ -6,6 +6,12 @@
     application_namespace: "{{ sickchill.namespace }}"
     create_nfs_pvc: yes
 
+- name: Ensure BusyBox image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ busybox.base_image }}"
+    private_image: "{{ busybox.container.image }}"
+
 - name: Ensure Sickchill image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
