--- a/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
@@ -5,6 +5,12 @@
   vars:
     application_namespace: "{{ ttrss.namespace }}"
 
+- name: Ensure BusyBox image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ busybox.base_image }}"
+    private_image: "{{ busybox.container.image }}"
+
 - name: Ensure TT-RSS image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
