Reduce pulls from dockerhub

--- a/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/mandatory.yaml
+++ b/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/mandatory.yaml
@@ -534,7 +534,8 @@ spec:
       containers:
         - name: patch
           image: jettech/kube-webhook-certgen:v1.2.0
-          imagePullPolicy: Always
+          # TODO : Reduce pulls from dockerhub
+          imagePullPolicy: IfNotPresent
           args:
             - patch
             - --webhook-name=ingress-nginx-admission
