--- a/ansible/install_applications/vars/infra-pihole.yml
+++ b/ansible/install_applications/vars/infra-pihole.yml
@@ -4,7 +4,7 @@
 _pihole_var_loader:
   base_image:
     name: "pihole/pihole"
-    tag: "v5.1-amd64"
+    tag: "v5.2.1-amd64-buster"
   namespace: "infra-pihole"
 
 pihole:
